--- a/app/views/public/landings/templates/new/_how_we_work.html.slim
+++ b/app/views/public/landings/templates/new/_how_we_work.html.slim
@@ -37,6 +37,6 @@
         .how_we_work-item_title
           | Вы получаете свой товар и платите за него на почте или курьеру
 
-    .how_we_work-more.animate-show_fast
+    .how_we_work-more
       span.g-dashed data-inline-modal='shipping_modal'
         | Доставка по Москве от одного дня, доставка во все регионы РФ в течение недели
