--- a/app/views/public/landings/templates/new/_reviews.html.slim
+++ b/app/views/public/landings/templates/new/_reviews.html.slim
@@ -6,7 +6,7 @@
   .reviews-inner
     .reviews-title.animate-show_fast
       | Что говорят наши покупатели
-    .reviews-wrap.animate-show_zoom data-view='app#reviews'
+    .reviews-wrap.animate-show data-view='app#reviews'
       .reviews-arrow_left.js-reviews-arrow_left
         = fa_icon 'chevron-left'
       .reviews-arrow_right.js-reviews-arrow_right
