--- a/app/views/public/landings/templates/new/_middle_page_cta.html.slim
+++ b/app/views/public/landings/templates/new/_middle_page_cta.html.slim
@@ -9,7 +9,7 @@
         .middle_page_cta-img_description
       .middle_page_cta-info
         .middle_page_cta-info_title
-          | Распродажа только до 15 марта 2015 года
+          | Распродажа только до #{l(2.days.from_now, format: :date)}
         .middle_page_cta-info_text
           | Успей купить <b>монопод Kjstar&nbsp;Z05-7</b> всего&nbsp;за&nbsp;<b>#{landing.public_price}&nbsp;рублей</b>!
         | Вы сэкономите <b>#{landing.discount}&nbsp;рублей</b>, сделав заказ сегодня!
