Fix gallery title margin

--- a/app/assets/stylesheets/public/new_template/blocks/gallery.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/gallery.sass
@@ -14,7 +14,7 @@
 .gallery-title
   text-align: center
   font-size: 13px
-  margin: 15px 0
+  margin: 15px 20px
 
 .gallery-nav
   text-align: center
