--- a/app/assets/stylesheets/public/new_template/blocks/footer_cta.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/footer_cta.sass
@@ -4,6 +4,7 @@
   position: relative
   border-bottom: 1px solid $bd
   background: rgba(0, 0, 0, .6)
+  overflow: hidden
 
 .footer_cta-bg
   position: absolute
