--- a/app/views/admin/money_load_transactions/new.slim
+++ b/app/views/admin/money_load_transactions/new.slim
@@ -1,17 +1,1 @@
-= neo_form_for @money_load_transaction do |f|
-  p.modal-text
-    b =@bookmaker.title
-
-  .modal-fields
-    = f.association :bookmaker, as: :hidden, value: params[:bookmaker_id]
-    = f.input :ammount_rub, as: :string, label: 'Сумма (RUB)'
-    = f.input :ammount, as: :string, label: 'Сумма (в валюте)'
-    = f.input :currency, as: :radio_buttons, collection: Currency::LIST.invert, label: 'Валюта', checked: @bookmaker.currency
-    = f.input :performed_at, value: Time.zone.now, label: 'Время добавления'
-
-  .modal-buttons
-    .fl_r
-      .small_button data-role='close_modal'
-        | Отмена
-      button.small_button.is-green type='submit'
-        | Сохранить
+= render 'form', transaction: @transaction, bookmaker: @bookmaker
