--- a/app/views/admin/transactions/confirm_destroy.slim
+++ b/app/views/admin/transactions/confirm_destroy.slim
@@ -5,4 +5,4 @@ p.modal-text
   .fl_r
     .small_button data-role='close_modal'
       | Отмена
-    = link_to 'Удалить', money_load_transaction_path(@transaction.id), remote: true, method: :delete, class: 'small_button is-red'
+    = link_to 'Удалить', transaction_path(@transaction.id), remote: true, method: :delete, class: 'small_button is-red'
