--- a/app/views/admin/bookmakers/_bookmaker.html.slim
+++ b/app/views/admin/bookmakers/_bookmaker.html.slim
@@ -15,10 +15,10 @@
           img src=bookmaker.image_url title=bookmaker.title
         .panel_list-items
           = list_item('Валюта', bookmaker.currency)
-          = list_item('Сумма (RUB)', "#{bookmaker.ammount_rub} RUB")
+          = list_item('Сумма (RUB)', bookmaker.ammount_rub)
           - unless bookmaker.currency == :RUB
-            = list_item("Сумма (#{bookmaker.currency})", "#{bookmaker.ammount} #{bookmaker.currency}")
-            = list_item('Средний курс', "#{bookmaker.exchange_rate} RUB")
+            = list_item("Сумма (#{bookmaker.currency})", bookmaker.ammount)
+            = list_item('Средний курс', bookmaker.exchange_rate)
           = list_row(bookmaker.description)
           = list_row do
             - if bookmaker.transactions.any?
