--- a/app/views/admin/bet_lines/_bet_line.html.slim
+++ b/app/views/admin/bet_lines/_bet_line.html.slim
@@ -1,8 +1,8 @@
-.panel_item data-view='item' data={item_id: bet_line.id, block_path: bet_line_path(bet_line)}
+.panel_item data-view='item' data={item_id: bet_line.id, block_path: cut_bet_line_path(bet_line)}
   .panel_item-header
     span data-role='editable_item-title'
       = link_to bet_line_path(bet_line) do
-        = bet_line.performed_at
+        | <b>Линия ##{bet_line.id}</b> (за #{bet_line.performed_at})
         span.chevron.is-right
     .fl_r
       = bet_line.edit_button
