Improve bets styling

--- a/app/assets/stylesheets/admin/primitives/panel.sass
+++ b/app/assets/stylesheets/admin/primitives/panel.sass
@@ -13,7 +13,7 @@
   text-shadow: 0 1px rgba(255, 255, 255, .75)
 
   a
-    text-decoration: none
+    text-decoration: underline
 
 =acts_as_panel_header_link
   position: relative
