Add statuses to forks and count them in the interface

--- a/app/views/admin/forks/_fork.html.slim
+++ b/app/views/admin/forks/_fork.html.slim
@@ -1,7 +1,7 @@
 .panel_item data-view='item' data={item_id: fork.id, block_path: fork_path(fork)}
   .panel_item-header
     span data-role='editable_item-title'
-      = fork.title
+      | #{fork.title} — #{fork.status_tag}
     .fl_r
       = fork.add_bet_button
       = fork.edit_button
