--- a/app/views/admin/bet_lines/_details.html.slim
+++ b/app/views/admin/bet_lines/_details.html.slim
@@ -2,9 +2,9 @@
   b.status>
     | #{bet_line.forks.size} всего,
   b.status.is-green>
-    | 5 сыграны,
+    | #{bet_line.played_out_forks.size} сыграны,
   b.status.is-red
-    | 3 на ставках
-= list_item 'Денег на ставках', '9500 RUB'
+    | #{bet_line.pending_forks.size} на ставках
+= list_item 'Денег на ставках', "#{bet_line.ammount_rub} RUB"
 = list_item 'Ожидаемая прибыль', '400-500 RUB (3.3%—5.5%)'
 = list_item 'Актуальная прибыль', '450 RUB (4%)'
