Implement actual profit for bet lines

--- a/app/views/admin/bet_lines/_details.html.slim
+++ b/app/views/admin/bet_lines/_details.html.slim
@@ -7,4 +7,4 @@
     | #{bet_line.pending_forks.size} на ставках
 = list_item 'Денег на ставках', "#{bet_line.ammount_rub} RUB"
 = list_item 'Ожидаемая прибыль', bet_line.expected_profit
-= list_item 'Актуальная прибыль', '450 RUB (4%)'
+= list_item 'Актуальная прибыль', bet_line.actual_profit
