--- a/app/views/admin/forks/_fork.html.slim
+++ b/app/views/admin/forks/_fork.html.slim
@@ -4,6 +4,7 @@
       | #{fork.title} — #{fork.status_tag}
     .fl_r
       = fork.add_bet_button
+      = fork.select_winner_button
       = fork.edit_button
       = fork.remove_button
 
