--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -22,8 +22,8 @@ html
           | Coffee Dolphins
           - if current_user
             .fl_r
-              ' Вы вошли как <b>#{current_user.email}</b>,
-              = link_to 'выйти', logout_path
+              ' You logged in as <b>#{current_user.email}</b>,
+              = link_to 'logout', logout_path
 
       .clearfix
         section.layout-content
@@ -38,7 +38,12 @@ html
               .menu-header
                 | Меню
               .menu-items
-                - menu_items.each do |title, path, options = {}|
+                - if @api_layout
+                  - menu_items_for_layout = api_menu_items
+                - else
+                  - menu_items_for_layout = menu_items
+
+                - menu_items_for_layout.each do |title, path, options = {}|
                   - current_page = current_page?(path)
                   = link_to title, path, class: "menu-item #{'is-active' if current_page}", data: {role: 'app-menu_item', menu_item_id: options[:menu_item_id]}
 
