Add relations management

--- a/app/assets/stylesheets/admin/blocks/panel_list.sass
+++ b/app/assets/stylesheets/admin/blocks/panel_list.sass
@@ -4,9 +4,11 @@
 .panel_list
   &.for-resource_details
     .panel_list-label
+      font-weight: normal
       text-align: right
       width: 15%
     .panel_list-value
+      font-weight: bold
       width: 85%
 
 .panel_list-row
