Split resource schema into two columns

--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -36,7 +36,7 @@ html
           aside.layout-sidebar
             .menu data-role='app-menu'
               .menu-header
-                | Меню
+                | Menu
               .menu-items
                 - if @api_layout
                   - menu_items_for_layout = api_menu_items
