--- a/app/views/admin/apj/resources/_resource.html.slim
+++ b/app/views/admin/apj/resources/_resource.html.slim
@@ -7,27 +7,29 @@
       = resource.remove_button
 
   .panel-body.has-p15 data-role='editable_item-info'
-    .panel_list
-      .panel_item
-        .panel_item-header
-          | Fields
-        .panel_item-body
-          .panel_list.for-resource_details
-            - if resource.fields.any?
-              - resource.fields.each do |field|
-                = list_item field.type.name, field.name
-            - else
-              p.panel-text
-                | Resource has no fields specified.
+    .columns.has-2cols
+      .column
+        .panel
+          .panel-header
+            | Fields
+          .panel-body
+            .panel_list.for-resource_details
+              - if resource.fields.any?
+                - resource.fields.each do |field|
+                  = list_item field.type.name, field.name
+              - else
+                p.panel-text
+                  | Resource has no fields specified.
 
-      .panel_item
-        .panel_item-header
-          | Relations
-        .panel_item-body
-          .panel_list.for-resource_details
-            - if resource.relations.any?
-              - resource.relations.each do |relation|
-                = list_item relation.kind_humanized, relation.related_resource_name
-            - else
-              p.panel-text
-                | Resource has no relations specified.
+      .column
+        .panel
+          .panel-header
+            | Relations
+          .panel-body
+            .panel_list.for-resource_details
+              - if resource.relations.any?
+                - resource.relations.each do |relation|
+                  = list_item relation.kind_humanized, relation.related_resource_name
+              - else
+                p.panel-text
+                  | Resource has no relations specified.
