--- a/app/assets/stylesheets/admin/blocks/panel_list.sass
+++ b/app/assets/stylesheets/admin/blocks/panel_list.sass
@@ -7,6 +7,7 @@
       font-weight: normal
       text-align: right
       width: 20%
+      padding-right: 0
     .panel_list-value
       font-weight: bold
       width: 80%
